--- a/development.mdx
+++ b/development.mdx
@@ -96,3 +96,5 @@ Repeat step 3.
 </AccordionGroup>
 
 Curious about what changed in a CLI version? [Check out the CLI changelog.](/changelog/command-line)
+
+And you're done!
