--- a/development.mdx
+++ b/development.mdx
@@ -4,8 +4,7 @@ description: 'Learn how to preview changes locally'
 ---
 
 <Info>
-  **Prerequisite** You should have installed Node.js (version 18.10.0 or
-  higher).
+  **Prerequisite** You should have installed Node.js (version 18.10.0 or higher)..
 </Info>
 
 Step 1. Install Mintlify on your OS:
